--- a/css/stylo.css
+++ b/css/stylo.css
@@ -8,7 +8,7 @@
 }
 @font-face {
 	font-family: "poiret";
-	src: url(../fonts/UPoiretOne-Regular.ttf);
+	src: url(../fonts/Ubuntu-Regular.ttf);
 }
 .header {
 	font-family: Sofia;
